--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,13 +1,34 @@
 .container {
   width: 100%;
-  border-top: 1px solid black;
-  display: flex;
-  justify-content: center;
+  background-color: black;
   padding: 1.5em 0;
-  font-size: .65rem;
   margin-top: 3em;
 }
 
+.row {
+  display: flex;
+  justify-content: space-between;
+
+}
+
 .footerText {
-  text-align: center;
+  /* border: 1px solid red; */
+  margin-left: 5rem;
+  font-size: .7rem;
+  /* text-align: center; */
+  color: white;
+}
+
+.mediaIconsWrapper {
+  /* border: 1px solid blue; */
+  margin-right: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 110px;
+}
+
+.mediaIconsImg {
+  max-width: 50px;
+  /* border: 1px solid green; */
 }
